--- a/Walnut-App/WalnutApp/imgui.ini
+++ b/Walnut-App/WalnutApp/imgui.ini
@@ -31,9 +31,8 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][Settings]
-ViewportPos=1930,259
-ViewportId=0x1C33C293
-Size=579,900
+Pos=1016,541
+Size=520,282
 Collapsed=0
 
 [Window][View]
