--- a/Walnut-App/WalnutApp/imgui.ini
+++ b/Walnut-App/WalnutApp/imgui.ini
@@ -31,9 +31,10 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][Settings]
-Pos=1016,541
-Size=520,282
+Pos=1107,0
+Size=493,900
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][View]
 Size=1090,900
@@ -53,12 +54,14 @@ Collapsed=0
 
 [Window][Graph]
 Pos=0,0
-Size=1600,900
+Size=1105,900
 Collapsed=0
 DockId=0x00000002,0
 
 [Docking][Data]
-DockSpace   ID=0xF2944C7F Window=0x4647B76E Pos=277,311 Size=1600,900 Split=X Selected=0xE87781F4
-  DockNode  ID=0x00000001 Parent=0xF2944C7F SizeRef=1339,900 Selected=0x13926F0B
-  DockNode  ID=0x00000002 Parent=0xF2944C7F SizeRef=259,900 CentralNode=1 Selected=0x95AC42D5
+DockSpace     ID=0xF2944C7F Window=0x4647B76E Pos=391,425 Size=1600,900 Split=X Selected=0xE87781F4
+  DockNode    ID=0x00000003 Parent=0xF2944C7F SizeRef=1105,900 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1339,900 Selected=0x13926F0B
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=259,900 CentralNode=1 Selected=0x95AC42D5
+  DockNode    ID=0x00000004 Parent=0xF2944C7F SizeRef=493,900 Selected=0x54723243
 
